feat: add deployment config for Render + Vercel